# Pacman

./: .flake8  .gitignore  Makefile  README.md  README.txt  config.json  pac-man.py  pacman.spec  pyproject.toml
project_management/: class_diagram.md  project_timeline.md
src/pacman/: __init__.py  __main__.py  game.py  level_manager.py  main.py  maze_drawing.py  pacgum.py  parser.py  settings.py  spritesheet.py  strategy.py
src/pacman/characters/: __init__.py  character.py  ghosts.py  missile.py  pacman.py
src/pacman/scenes/: __init__.py  end_game.py  highscore_scene.py  instructions_scene.py  menu_scene.py  pause_scene.py  play_scene.py  scene.py
